--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,6 +7,12 @@
 
 }
 
+.centralizar {
+
+	display: block;
+	margin: auto;
+}
+
 .background-cor {
 
 	background-color: #18AFA0;
@@ -22,7 +28,7 @@
 
 	margin: auto;
 
-	margin-top: 80px;
+	margin-top: 30px;
 
 }
 
@@ -66,5 +72,24 @@
 	margin-right: 11%;
 
 	margin-left: 0;
+}
+
+.formulario-cadastro {
+
+	background-color: #fff;
+
+	border-radius: 5px;
+
+	margin-top: 30px;
+
+}
+
+#borda-formulario-cadastro {
+
+	border-top: 0px solid black;
+	border-right: 0px solid black;
+	border-left: 0px solid black;
+	border-bottom-color: #18AFA0;
+
 }
 
